Fix checkmark alignment by overriding wp-admin style (#1582)

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -53,6 +53,7 @@
 		font-size: 16px;
 		font-weight: 600;
 		line-height: 0px;
+		float: none;
 	}
 
 	%form-field {
